# cpy

./: README.md  fish_amp_cond_diffusion.py  pyproject.toml
cell_painting_pipeline/: __init__.py  aggregation.py  cli.py  config.py  embedding.py  evaluation.py  generator.py  manifest.py  pipeline.py  preprocessing.py  sampling.py  scoring.py  selection.py  smiles.py
